# script-runner-mcp

./: .gitignore  README.md  pyproject.toml
src/script_runner_mcp/: Dockerfile  __init__.py  main.py
