[project]
authors = [
    { name = "Ashlynn Antrobus", email = "ashrobertsantrobus@gmail.com" },
]
dependencies = ["mcp[cli]>=1.12.3"]
description = "An MCP server for running local scripts"
license = { text = "MIT" }
name = "script-runner-mcp"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
script-runner-mcp = "script_runner_mcp:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.4,<0.9.0"]
